test/programs/good/check-terms-precedence/boolean_expression_stronger_than_dollar_2.lq
fun :: Bit
fun = a $ (b 2 > 1)

