test/programs/bad/function_has_boolean_arg__IncorrectNumberOfFunctionArguments.lq
fun :: Bool -> Bit
fun bool arg  = 1

main :: Bit
main = other
